# Vibes

./: código em pt_br_v2.py  código em pt_br_v3.py  pyproject.toml
dados/: FRF.csv  Passa-banda.csv
src/: final.py  main.py  teste.py
